--- a/cuba/index.html
+++ b/cuba/index.html
@@ -91,6 +91,62 @@
     <section class="section-team">
         <h1>MEET OUR BEAUTIFUL TEAM</h1>
         <p>We are small team of designers and developers, who help brands with big ideas.</p>
+        <div class="row">
+            <div class="col-3">
+                <img src="images/Anne.jpeg" alt="">
+                <h2>ANNE HATHAWAY</h2>
+                <p class="lazur">CEO / Marketing Guru</p>
+                <p>Lorem ipsum dolor sit amet,</p>
+                <p> consectetuer adipiscing elit,</p>
+                <p> sed diam nonummy nibh.</p>
+                <p>euismod tincidunt ut laoreet</p>
+                <p>dolore magna.</p>
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-linkedin-in"></i>
+                <i class="fas fa-envelope"></i>
+            </div>
+            <div class="col-3">
+                <img src="images/kate.jpeg" alt="">
+                <h2>KATE UPTON</h2>
+                <p class="lazur">Creative Director</p>
+                <p>Dius aute irune dolor in in</p>
+                <p> voluptate velit esse cillum</p>
+                <p> dolore fugiat nulla pariatur.</p>
+                <p>Excepteur sint occaecat non</p>
+                <p>diam proident.</p>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-linkedin-in"></i>
+                <i class="fas fa-envelope"></i>
+            </div>
+            <div class="col-3">
+                <img src="images/olivia.jpg" alt="">
+                <h2>OLIVIA WILDE</h2>
+                <p class="lazur">Lead Designer</p>
+                <p>Nemo enim ipsam voluptas</p>
+                <p> sit aspernatur aut odit aut</p>
+                <p> fugit, sed quia consequuntur</p>
+                <p>magni dolores eos qui ratione</p>
+                <p>voluptatem nesciunt.</p>
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-linkedin-in"></i>
+                <i class="fas fa-envelope"></i>
+            </div>
+            <div class="col-3">
+                <img src="images/ashley.png" alt="">
+                <h2>ASHLEY GREENE</h2>
+                <p class="lazur">SEO / Developer</p>
+                <p>Sed ut perspiciatis unde</p>
+                <p>omnis iste natus error sit</p>
+                <p>voluptatem accusantium,</p>
+                <p>doloremque landantium,</p>
+                <p>totam rem aperiam.</p>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-linkedin-in"></i>
+                <i class="fas fa-envelope"></i>
+            </div>
+        </div>
 
     </section>
 
