--- a/cuba/index.html
+++ b/cuba/index.html
@@ -150,6 +150,25 @@
 
     </section>
 
+    <section class="section-skills">
+        <h1>WE GOT SKILLS!</h1>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed do euismod</p>
+        <p>tempor incididunt ut labore et dolore magna aliqua.</p>
+        <div class="row">
+            <div class="col-3">
+                <img src="images/skills-1.png" alt="">
+            </div>
+            <div class="col-3">
+                <img src="images/skills-2.png" alt="">
+            </div>
+            <div class="col-3">
+                <img src="images/skills-3.png" alt="">
+            </div>
+            <div class="col-3">
+                <img src="images/skills-4.png" alt="">
+            </div>
+        </div>
+    </section>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
