--- a/cuba/index.html
+++ b/cuba/index.html
@@ -170,6 +170,40 @@
         </div>
     </section>
 
+    <section class="section-portfolio">
+        <h1>OUR PORTFOLIO</h1>
+        <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet</p>
+        <p>consectetuer, adipisci velit, sed quia non numquam</p>
+        <div class="container-port">
+            <nav class="navbar-port">
+                    <a class="white" href="#">ALL</a> 
+                    <a class="byellow" href="#">WEB</a>
+                    <a class="byellow" href="#">APPS</a>
+                    <a class="byellow" href="#">ICONS</a>
+            </nav>
+        </div>
+
+        <div class="row">
+            <div class="col-6">
+                <img src="images/portfolio-1.png" alt="">
+                <p class="name">ISOMETRIC PERSPECTIVE MOCK-UP</p>
+            </div>
+            <div class="col-6">
+                <img src="images/portfolio-2.png" alt="">
+                <p class="name">TIME ZONE APP UI</p>
+            </div>
+            <div class="col-6">
+                <img src="images/portfolio-3.png" alt="">
+                <p class="name">VIRO MEDIA PLAYERS UI</p>
+            </div>
+            <div class="col-6">
+                <img src="images/portfolio-4.png" alt="">
+                <p class="name">BLOG / MAGAZINE FLAT UI KIT</p>
+            </div>
+        </div>
+        <button class="portfolio-button">LOAD MORE PROJECTS</button>
+    </section>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
