--- a/cuba/index.html
+++ b/cuba/index.html
@@ -204,6 +204,54 @@
         <button class="portfolio-button">LOAD MORE PROJECTS</button>
     </section>
 
+    <section class="section-people">
+        <h1>WHAT PEOPLE SAY ABOUT US</h1>
+        <h6>Our clients love us!</h6>
+            <div class="row">
+                <div class="col-md-2">
+                    <img src="images/shanel.jpg" alt="">
+                </div>
+                <div class="col-md-4">
+                    <p>"Nullam dapibus blandit orci, viverra</p>
+                    <p>gravida dui lobortis eget. Maecenas</p>
+                    <p>fringilla urna eu nisl scelerisque."</p>
+                    <h2>CHANEL IMAN</h2>
+                    <p class="profession">CEO of Pinterest</p>
+                </div>
+                <div class="col-md-2">
+                    <img src="images/lima.jpeg" alt="">
+                </div>
+                <div class="col-md-4">
+                    <p>"Vivamus luctus urna sed urna ultricies</p>
+                    <p>ac tempor dui sagittis. In condimentum</p>
+                    <p>facilisis porta."</p>
+                    <h2>ADRIANA LIMA</h2>
+                    <p class="profession">Founder of Instagram</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-2">
+                    <img src="images/kim taeyeon.jpg" alt="">
+                </div>
+                <div class="col-md-4">
+                    <p>"Vivamus luctus urna sed urna ultricies</p>
+                    <p>ac tempor dui sagittis. In condimentum</p>
+                    <p>facilisis porta."</p>
+                    <h2>TAEYEON KIM</h2>
+                    <p class="profession">Lead Designer at Behance</p>
+                </div>
+                <div class="col-md-2">
+                    <img src="images/emma.jpg" alt="">
+                </div>
+                <div class="col-md-4">
+                    <p>"Phasellus non purus vel arcu tempor"</p>
+                    <p>commodo. Fusce semper, purus vel luctus</p>
+                    <p>molestie, risus sem cursus neque.</p>
+                    <h2>EMMA STONE</h2>
+                    <p class="profession">Co-Founder of Shazam</p>
+                </div>
+            </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
