--- a/cuba/index.html
+++ b/cuba/index.html
@@ -252,6 +252,29 @@
                 </div>
             </div>
     </section>
+    
+    <section class="section-touch">
+        <h1>GET IN TOUCH</h1>
+        <p>1600 Pennsylvania Ave NW, Washington, DC 20500, United States of America. Tel: (202) 456-1111</p>
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-4">
+            <input type="text" name="name" placeholder="Your Name*">
+        </div>
+        <div class="col-4">
+            <input type="text" name="email-adress" placeholder="Your Email*">
+        </div>
+        <div class="col-2"></div>
+    </div>    
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-md-8">
+            <textarea name="message" id="" cols="30" rows="10" placeholder="Your Message*"></textarea>
+        </div>
+        <div class="col-2"></div>
+    </div>
+    <button class="touch-button">SEND MESSAGE</button>
+    </section>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
