--- a/cuba/index.html
+++ b/cuba/index.html
@@ -275,6 +275,37 @@
     </div>
     <button class="touch-button">SEND MESSAGE</button>
     </section>
+
+    <footer class="footer">
+        <div class="container-nav">
+            <nav class="navbar footer-navbar">
+                <ul class="nav mx-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Facebook</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Twitter</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Google+</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">LinkedIn</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Behance</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Dribbble</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">GitHub</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
