--- a/cuba/index.html
+++ b/cuba/index.html
@@ -35,7 +35,7 @@
                                 <a class="nav-link" href="#">BLOG</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">CONTACT</a>
+                                <a class="nav-link" href="Contact.html">CONTACT</a>
                             </li>
                         </ul>
                 </nav>
