--- a/Test/index.html
+++ b/Test/index.html
@@ -57,9 +57,9 @@
                     <p>и безалкогольных напитков</p>
                 </div>
         </div>
-    </header>
+    
 
-    <section class="about-us">
+    <section class="timer-header">
         <div class="container">
             <h1>Image</h1>
             <div class="click">
@@ -69,6 +69,50 @@
         </div>
 
     </section>
+</header>
+
+<section class="section-about">
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <p>Немного о нас</p>
+            </div>
+            <div class="col-1">
+                <p>a/b</p>
+            </div>
+            <div class="col-4">
+                <p>timeline</p>
+            </div>
+            <div class="col-1">
+                <p>arrows</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <p>ООО "Эльбрусская прохлада"- отптовые продажи безалкогольных напитков от производителя.
+                Широкий ассортимент лимонадов,минеральной воды,разных сементов.
+                Артезианская питьевая вода,добывается из скважины глубиной 230 м. 
+                Автоматизированная система розлива исключает любые загрязнения в процессе 
+                производства, а отсутствие поблизости крупных предприятий и сельхозугодий гарантирует чистоту добываемой воды.</p>
+            </div>
+            <div class="col-6">
+                <img src="images/test2.jpg" alt="">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <img src="images/test3.jpg" alt="">
+            </div>
+            <div class="col-6">
+                <input type="text" name="name" placeholder="Name">
+                <input type="email" name="email-adress" placeholder="E-mail">
+                <button class="about-button">Отправить</button>    
+            </div>
+        </div>
+    </div>
+</section>
+
+    
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
