--- a/autochess/index.html
+++ b/autochess/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 
     <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="shortcut icon" href="images/favicon_mini.png" type="image">
 </head>
 
 <body>
