--- a/autochess/rarity.html
+++ b/autochess/rarity.html
@@ -51,16 +51,23 @@
         <div class="container">
             <div class="table">
                 <div class="row">
-                    <div class="col"> <a href="javascrpipt:collaspElement('defector1');
+                    <div class="col"><a href="javascrpipt:collaspElement('defector1');
                         javascrpipt:collapsElement('egersisRanger2')" title="" rel="nofollow">Common</a>
                     </div>
-                    <div class="defector1" style="display: none">
+                    <div id="defector1" style="display: none">
                         <p class="name">Defector</p>
                         <a href="defector.html"><img src="images/face/Defector.png" id="face" alt=""></a> 
                     </div>
-                    <div class="egersisRanger2" style="display: none">
+                    <div id="egersisRanger2" style="display: none">
                         <p class="name">Egersis Ranger</p>
                         <a href="egersisRanger.html"><img src="images/face/Egersis Ranger.png" id="face" alt=""></a> 
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col"><a href="javascript:collapsElement('identifikator3');
+                        javascript:collapsElement('identifikator3');
+                        javascript:collapsElement('identifikator3');
+                        javascript:collapsElement('identifikator3')" title="" rel="nofollow">Uncommon</a>
                     </div>
                 </div>
             </div>
