--- a/autochess/rarity.html
+++ b/autochess/rarity.html
@@ -36,40 +36,12 @@
             </div>
         </nav>
     </header>
-    <script>
-        function collapsElement (id) {
-            if (document.getElementById(id).style.display != "none") {
-                document.getElementById(id).style.display = 'none';
-            }
-            else {
-                document.getElementById(id).style.display = '';
-            }
-        }
-    </script>
 
     <div class="rarity-logo">
         <div class="container">
-            <div class="table">
-                <div class="row">
-                    <div class="col"><a href="javascrpipt:collaspElement('defector1');
-                        javascrpipt:collapsElement('egersisRanger2')" title="" rel="nofollow">Common</a>
-                    </div>
-                    <div id="defector1" style="display: none">
-                        <p class="name">Defector</p>
-                        <a href="defector.html"><img src="images/face/Defector.png" id="face" alt=""></a> 
-                    </div>
-                    <div id="egersisRanger2" style="display: none">
-                        <p class="name">Egersis Ranger</p>
-                        <a href="egersisRanger.html"><img src="images/face/Egersis Ranger.png" id="face" alt=""></a> 
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col"><a href="javascript:collapsElement('identifikator3');
-                        javascript:collapsElement('identifikator3');
-                        javascript:collapsElement('identifikator3');
-                        javascript:collapsElement('identifikator3')" title="" rel="nofollow">Uncommon</a>
-                    </div>
-                </div>
+            <button class="collapsible">Common</button>
+            <div class="content">
+                <p class="names">Hey</p>
             </div>
         </div>
     </div>
