--- a/autochess/builder.html
+++ b/autochess/builder.html
@@ -36,16 +36,17 @@
             </div>
         </nav>
 
-        <div class="builder-logo">
-            <div class="container">
-                <div class="row">
-            
-                </div>
-
-            </div>
-        </div>
-
     </header>
+
+    <div class="builder-logo">
+        <div class="container">
+            <div class="panel-heroes">
+                <img src="images/face/Abyssal Crawler.png" onclick="chooseHero('AbyssalCrawler')" />
+                <img src="images/face/Abyssal Guard.png" onclick="chooseHero('AbyssalGuard')" />
+            </div>
+
+        </div>
+    </div>
 
         <footer class="footer">
                 <div class="container">
