--- a/autochess/rarity.html
+++ b/autochess/rarity.html
@@ -39,25 +39,100 @@
 
     <div class="rarity-logo">
         <div class="container">
-            <button class="collapsible">Common</button>
+            <button class="collapsible"> <p>Common 1<img src="images/coin.png" alt=""></p>
+            </button>
             <div class="content">
                 <div class="row">
-                    <div class="col">
+                    <div class="col-2">
                         <img src="images/face/Defector.png" alt="">
-                        <h4>Defector</h4>
-                        <img src="images/origin/Glacier Clan.png" alt="">
-                        <img src="images/class/Shaman.png" alt="">
+                        <h4 class="common">Defector</h4>
+                        <img src="images/origin/Glacier.png" class="origin" alt="">
+                        <img src="images/class/Shaman.png" class="class" alt="">
                     </div>
-                    <div class="col">
-                        <img src="images/face/Egersis Ranger.png" alt="">
-                        <h4>Defector</h4>
-                        <img src="images/origin/Egersis.png" alt="">
-                        <img src="images/class/Hunter.png" alt="">
+                    <div class="col-2">
+                        <img src="images/face/EgersisRanger.png" alt="">
+                        <h4 class="common">Egersis Ranger</h4>
+                        <img src="images/origin/Egersis.png" class="origin" alt="">
+                        <img src="images/class/Hunter.png" class="class" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="images/face/FrostKnight.png" alt="">
+                        <h4 class="common">Frost Knight</h4>
+                        <img src="images/origin/Glacier.png" class="origin" alt="">
+                        <img src="images/class/Knight.png" class="class" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="images/face/Godof War.png" alt="">
+                        <h4 class="common">God of War</h4>
+                        <img src="images/origin/Divinity.png" class="origin" alt="">
+                        <img src="images/class/Warrior.png" class="class" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="images/face/HeavenBomber.png" alt="">
+                        <h4 class="common">Heaven Bomber</h4>
+                        <img src="images/origin/Goblin.png" class="origin" alt="">
+                        <img src="images/class/Mech.png" class="class" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="images/face/OgreMage.png" alt="">
+                        <h4 class="common">Ogre Mage</h4>
+                        <img src="images/origin/Kira.png" class="origin" alt="">
+                        <img src="images/class/Mage.png" class="class" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="images/face/RedaxeChief.png" alt="">
+                        <h4 class="common">Redaxe Chief</h4>
+                        <img src="images/origin/Cave.png" class="origin" alt="">
+                        <img src="images/class/Warrior.png" class="class" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="images/face/SkyBreaker.png" alt="">
+                        <h4 class="common">Sky Breaker</h4>
+                        <img src="images/origin/Goblin.png" class="origin" alt="">
+                        <img src="images/class/Mech.png" class="class" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="images/face/SoulBreaker.png" alt="">
+                        <h4 class="common">Soul Breaker</h4>
+                        <img src="images/origin/Goblin.png" class="origin" alt="">
+                        <img src="images/class/Assassin.png" class="class" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="images/face/StoneSpirit.png" alt="">
+                        <h4 class="common">Stone Spirit</h4>
+                        <img src="images/origin/Spirits.png" class="origin" alt="">
+                        <img src="images/class/Warrior.png" class="class" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="images/face/TabooWitcher.png" alt="">
+                        <h4 class="common">Taboo Witcher</h4>
+                        <img src="images/origin/Feathered.png" class="origin" alt="">
+                        <img src="images/class/Witcher.png" class="class" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="images/face/TuskChampion.png" alt="">
+                        <h4 class="common">Tusk Champion</h4>
+                        <img src="images/origin/Beast.png" class="origin" alt="">
+                        <img src="images/class/Warrior.png" class="class" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="images/face/Unicorn.png" alt="">
+                        <h4 class="common">Unicorn</h4>
+                        <img src="images/origin/Beast.png" class="origin" alt="">
+                        <img src="images/class/Druid.png" class="class" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="images/face/WinterChiropteran.png" alt="">
+                        <h4 class="common">Winter Chiropteran</h4>
+                        <img src="images/origin/Dragon.png" class="origin" alt="">
+                        <img src="images/class/Mage.png" class="class" alt="">
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+
         <footer class="footer">
                 <div class="container">
                     <div class="row">
