--- a/autochess/builder.html
+++ b/autochess/builder.html
@@ -39,6 +39,9 @@
     </header>
 
     <div class="builder-logo">
+        <div class="heroes-button">
+            <button onclick="toggleHeroes()">Выбрать героя</button>
+        </div>
         <div class="container">
             <div class="panel-heroes">
                 <img src="images/face/AbyssalGuard.png" onclick="chooseHero('AbyssalGuard')" />
@@ -46,7 +49,7 @@
                 <img src="images/face/ArgaliKnight.png" onclick="chooseHero('ArgaliKnight')" />
                 <img src="images/face/Berserker.png" onclick="chooseHero('Berserker')" />
                 <img src="images/face/BlightSorcerer.png" onclick="chooseHero('BlightSorcerer')" />
-                <img src="images/face/Darkspirit.png" onclick="chooseHero('Darkspirit')" />
+                <img src="images/face/Darkspirit.png" onclick="chooseHero('DarkSpirit')" />
                 <img src="images/face/Defector.png" onclick="chooseHero('Defector')" />
                 <img src="images/face/DesperateDoctor.png" onclick="chooseHero('DesperateDoctor')" />
                 <img src="images/face/Devastator.png" onclick="chooseHero('Devastator')" />
