--- a/autochess/builder.html
+++ b/autochess/builder.html
@@ -38,79 +38,76 @@
 
     </header>
 
-    <div class="builder-logo">
+    <div class="builder">
         <div class="heroes-button">
             <button onclick="toggleHeroes()">Выбрать героя</button>
         </div>
-        <div class="container">
-            <div class="panel-heroes">
-                <img src="images/face/AbyssalGuard.png" onclick="chooseHero('AbyssalGuard')" />
-                <img src="images/face/Abyssalcrawler.png" onclick="chooseHero('AbyssalCrawler')" />
-                <img src="images/face/ArgaliKnight.png" onclick="chooseHero('ArgaliKnight')" />
-                <img src="images/face/Berserker.png" onclick="chooseHero('Berserker')" />
-                <img src="images/face/BlightSorcerer.png" onclick="chooseHero('BlightSorcerer')" />
-                <img src="images/face/Darkspirit.png" onclick="chooseHero('DarkSpirit')" />
-                <img src="images/face/Defector.png" onclick="chooseHero('Defector')" />
-                <img src="images/face/DesperateDoctor.png" onclick="chooseHero('DesperateDoctor')" />
-                <img src="images/face/Devastator.png" onclick="chooseHero('Devastator')" />
-                <img src="images/face/DoomArbiter.png" onclick="chooseHero('DoomArbiter')" />
-                <img src="images/face/DragonKnight.png" onclick="chooseHero('DragonKnight')" />
-                <img src="images/face/DwarfSniper.png" onclick="chooseHero('DwarfSniper')" />
-                <img src="images/face/EgersisProphet.png" onclick="chooseHero('EgersisProphet')" />
-                <img src="images/face/EgersisRanger.png" onclick="chooseHero('EgersisRanger')" />
-                <img src="images/face/EvilKnight.png" onclick="chooseHero('EvilKnight')" />
-                <img src="images/face/FallenWitcher.png" onclick="chooseHero('FallenWitcher')" />
-                <img src="images/face/FlammingWizard.png" onclick="chooseHero('FlammingWizard')" />
-                <img src="images/face/FortuneTeller.png" onclick="chooseHero('FortuneTeller')" />
-                <img src="images/face/FrostKnight.png" onclick="chooseHero('FrostKnight')" />
-                <img src="images/face/Godof Thunder.png" onclick="chooseHero('GodOfThunder')" />
-                <img src="images/face/Godof War.png" onclick="chooseHero('GodOfWar')" />
-                <img src="images/face/GrandHerald.png" onclick="chooseHero('GrandHerald')" />
-                <img src="images/face/Grimtouch.png" onclick="chooseHero('Grimtouch')" />
-                <img src="images/face/HeavenBomber.png" onclick="chooseHero('HeavenBomber')" />
-                <img src="images/face/Helicopter.png" onclick="chooseHero('Helicopter')" />
-                <img src="images/face/HellKnight.png" onclick="chooseHero('HellKnight')" />
-                <img src="images/face/LightbladeKnight.png" onclick="chooseHero('LightbladeKnight')" />
-                <img src="images/face/Lordof Sand.png" onclick="chooseHero('LordOfStan')" />
-                <img src="images/face/OgreMage.png" onclick="chooseHero('OgreMage')" />
-                <img src="images/face/PhantomQueen.png" onclick="chooseHero('PhantomQueen')" />
-                <img src="images/face/PirateCaptain.png" onclick="chooseHero('PirateCaptain')" />
-                <img src="images/face/Poisonousworm.png" onclick="chooseHero('PoisonousWorm')" />
-                <img src="images/face/Razorclaw.png" onclick="chooseHero('RazorClaw')" />
-                <img src="images/face/RedaxeChief.png" onclick="chooseHero('RedaxeChief')" />
-                <img src="images/face/Ripper.png" onclick="chooseHero('Ripper')" />
-                <img src="images/face/RogueGuard.png" onclick="chooseHero('RogueGuard')" />
-                <img src="images/face/Shadowcrawler.png" onclick="chooseHero('ShadowCrawler')" />
-                <img src="images/face/ShadowDevil.png" onclick="chooseHero('ShadowDevil')" />
-                <img src="images/face/ShiningArcher.png" onclick="chooseHero('ShiningArcher')" />
-                <img src="images/face/ShiningAssassin.png" onclick="chooseHero('Berserker')" />
-                <img src="images/face/ShiningDragon.png" onclick="chooseHero('ShiningDragon')" />
-                <img src="images/face/Siren.png" onclick="chooseHero('Siren')" />
-                <img src="images/face/SkullHunter.png" onclick="chooseHero('SkullHunter')" />
-                <img src="images/face/SkyBreaker.png" onclick="chooseHero('SkyBreaker')" />
-                <img src="images/face/SoulBreaker.png" onclick="chooseHero('SoulBreaker')" />
-                <img src="images/face/SoulReaper.png" onclick="chooseHero('SoulReaper')" />
-                <img src="images/face/StoneSpirit.png" onclick="chooseHero('StoneSpirit')" />
-                <img src="images/face/StormShaman.png" onclick="chooseHero('StormShaman')" />
-                <img src="images/face/StrangeEgg.png" onclick="chooseHero('StrangeEgg')" />
-                <img src="images/face/Swordman.png" onclick="chooseHero('Swordman')" />
-                <img src="images/face/TabooWitcher.png" onclick="chooseHero('TabooWitcher')" />
-                <img src="images/face/TheSource.png" onclick="chooseHero('TheSource')" />
-                <img src="images/face/ThunderSpirit.png" onclick="chooseHero('ThunderSpirit')" />
-                <img src="images/face/TortolaElder.png" onclick="chooseHero('TortolaElder')" />
-                <img src="images/face/TsunamiStalker.png" onclick="chooseHero('TsunamiStalker')" />
-                <img src="images/face/TuskChampion.png" onclick="chooseHero('TuskChampion')" />
-                <img src="images/face/Unicorn.png" onclick="chooseHero('Unicorn')" />
-                <img src="images/face/Venom.png" onclick="chooseHero('Venom')" />
-                <img src="images/face/Venomancer.png" onclick="chooseHero('Venomancer')" />
-                <img src="images/face/WarpwoodSage.png" onclick="chooseHero('WarpwoodSage')" />
-                <img src="images/face/WaterSpirit.png" onclick="chooseHero('WaterSpirit')" />
-                <img src="images/face/Werewolf.png" onclick="chooseHero('Werewolf')" />
-                <img src="images/face/WindRanger.png" onclick="chooseHero('WindRanger')" />
-                <img src="images/face/WinterChiropteran.png" onclick="chooseHero('WinterChiropteran')" />
-                <img src="images/face/WisperSeer.png" onclick="chooseHero('WisperSeer')" />
-            </div>
-
+        <div class="panel-heroes container">
+            <img src="images/face/AbyssalGuard.png" onclick="chooseHero('AbyssalGuard')" />
+            <img src="images/face/Abyssalcrawler.png" onclick="chooseHero('AbyssalCrawler')" />
+            <img src="images/face/ArgaliKnight.png" onclick="chooseHero('ArgaliKnight')" />
+            <img src="images/face/Berserker.png" onclick="chooseHero('Berserker')" />
+            <img src="images/face/BlightSorcerer.png" onclick="chooseHero('BlightSorcerer')" />
+            <img src="images/face/Darkspirit.png" onclick="chooseHero('DarkSpirit')" />
+            <img src="images/face/Defector.png" onclick="chooseHero('Defector')" />
+            <img src="images/face/DesperateDoctor.png" onclick="chooseHero('DesperateDoctor')" />
+            <img src="images/face/Devastator.png" onclick="chooseHero('Devastator')" />
+            <img src="images/face/DoomArbiter.png" onclick="chooseHero('DoomArbiter')" />
+            <img src="images/face/DragonKnight.png" onclick="chooseHero('DragonKnight')" />
+            <img src="images/face/DwarfSniper.png" onclick="chooseHero('DwarfSniper')" />
+            <img src="images/face/EgersisProphet.png" onclick="chooseHero('EgersisProphet')" />
+            <img src="images/face/EgersisRanger.png" onclick="chooseHero('EgersisRanger')" />
+            <img src="images/face/EvilKnight.png" onclick="chooseHero('EvilKnight')" />
+            <img src="images/face/FallenWitcher.png" onclick="chooseHero('FallenWitcher')" />
+            <img src="images/face/FlammingWizard.png" onclick="chooseHero('FlammingWizard')" />
+            <img src="images/face/FortuneTeller.png" onclick="chooseHero('FortuneTeller')" />
+            <img src="images/face/FrostKnight.png" onclick="chooseHero('FrostKnight')" />
+            <img src="images/face/Godof Thunder.png" onclick="chooseHero('GodOfThunder')" />
+            <img src="images/face/Godof War.png" onclick="chooseHero('GodOfWar')" />
+            <img src="images/face/GrandHerald.png" onclick="chooseHero('GrandHerald')" />
+            <img src="images/face/Grimtouch.png" onclick="chooseHero('Grimtouch')" />
+            <img src="images/face/HeavenBomber.png" onclick="chooseHero('HeavenBomber')" />
+            <img src="images/face/Helicopter.png" onclick="chooseHero('Helicopter')" />
+            <img src="images/face/HellKnight.png" onclick="chooseHero('HellKnight')" />
+            <img src="images/face/LightbladeKnight.png" onclick="chooseHero('LightbladeKnight')" />
+            <img src="images/face/Lordof Sand.png" onclick="chooseHero('LordOfStan')" />
+            <img src="images/face/OgreMage.png" onclick="chooseHero('OgreMage')" />
+            <img src="images/face/PhantomQueen.png" onclick="chooseHero('PhantomQueen')" />
+            <img src="images/face/PirateCaptain.png" onclick="chooseHero('PirateCaptain')" />
+            <img src="images/face/Poisonousworm.png" onclick="chooseHero('PoisonousWorm')" />
+            <img src="images/face/Razorclaw.png" onclick="chooseHero('RazorClaw')" />
+            <img src="images/face/RedaxeChief.png" onclick="chooseHero('RedaxeChief')" />
+            <img src="images/face/Ripper.png" onclick="chooseHero('Ripper')" />
+            <img src="images/face/RogueGuard.png" onclick="chooseHero('RogueGuard')" />
+            <img src="images/face/Shadowcrawler.png" onclick="chooseHero('ShadowCrawler')" />
+            <img src="images/face/ShadowDevil.png" onclick="chooseHero('ShadowDevil')" />
+            <img src="images/face/ShiningArcher.png" onclick="chooseHero('ShiningArcher')" />
+            <img src="images/face/ShiningAssassin.png" onclick="chooseHero('Berserker')" />
+            <img src="images/face/ShiningDragon.png" onclick="chooseHero('ShiningDragon')" />
+            <img src="images/face/Siren.png" onclick="chooseHero('Siren')" />
+            <img src="images/face/SkullHunter.png" onclick="chooseHero('SkullHunter')" />
+            <img src="images/face/SkyBreaker.png" onclick="chooseHero('SkyBreaker')" />
+            <img src="images/face/SoulBreaker.png" onclick="chooseHero('SoulBreaker')" />
+            <img src="images/face/SoulReaper.png" onclick="chooseHero('SoulReaper')" />
+            <img src="images/face/StoneSpirit.png" onclick="chooseHero('StoneSpirit')" />
+            <img src="images/face/StormShaman.png" onclick="chooseHero('StormShaman')" />
+            <img src="images/face/StrangeEgg.png" onclick="chooseHero('StrangeEgg')" />
+            <img src="images/face/Swordman.png" onclick="chooseHero('Swordman')" />
+            <img src="images/face/TabooWitcher.png" onclick="chooseHero('TabooWitcher')" />
+            <img src="images/face/TheSource.png" onclick="chooseHero('TheSource')" />
+            <img src="images/face/ThunderSpirit.png" onclick="chooseHero('ThunderSpirit')" />
+            <img src="images/face/TortolaElder.png" onclick="chooseHero('TortolaElder')" />
+            <img src="images/face/TsunamiStalker.png" onclick="chooseHero('TsunamiStalker')" />
+            <img src="images/face/TuskChampion.png" onclick="chooseHero('TuskChampion')" />
+            <img src="images/face/Unicorn.png" onclick="chooseHero('Unicorn')" />
+            <img src="images/face/Venom.png" onclick="chooseHero('Venom')" />
+            <img src="images/face/Venomancer.png" onclick="chooseHero('Venomancer')" />
+            <img src="images/face/WarpwoodSage.png" onclick="chooseHero('WarpwoodSage')" />
+            <img src="images/face/WaterSpirit.png" onclick="chooseHero('WaterSpirit')" />
+            <img src="images/face/Werewolf.png" onclick="chooseHero('Werewolf')" />
+            <img src="images/face/WindRanger.png" onclick="chooseHero('WindRanger')" />
+            <img src="images/face/WinterChiropteran.png" onclick="chooseHero('WinterChiropteran')" />
+            <img src="images/face/WisperSeer.png" onclick="chooseHero('WisperSeer')" />
         </div>
     </div>
 
