--- a/autochess/builder.html
+++ b/autochess/builder.html
@@ -40,10 +40,9 @@
 
     <div class="builder">
         <div class="heroes-button">
-            <button onclick="toggleHeroes()">Выбрать героя</button>
+            <button onclick="togglePanelHeroes()">Выбрать героя</button>
         </div>
-        <div class="panel-heroes container">
-        </div>
+        <div class="panel-heroes container"></div>
         <div class="recommended-heroes container"></div>
     </div>
 
