--- a/autochess/builder.html
+++ b/autochess/builder.html
@@ -40,7 +40,7 @@
 
     <div class="builder">
         <div class="heroes-button">
-                <button onclick="toggleHeroes()">Pick a hero</button>
+                <button onclick="togglePanelHeroes()">Pick a hero</button>
         </div>
         <div class="panel-heroes container">
         </div>
